--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "mocha --colors --watch  test/setup.test.js */*.test.js",
+    "test": "nyc mocha",
     "cover": "nodemon --exec nyc --reporter=lcov --reporter=text-summary mocha test/setup.test.js */*.test.js"
   },
   "repository": {
@@ -21,13 +21,14 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "uuid": "^2.0.3"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "mocha": "^3.5.3",
-    "nodemon": "^1.12.1",
-    "nyc": "^11.2.1"
+    "nodemon": "^1.14.11",
+    "nyc": "^11.4.1"
   }
 }
