--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/adpoyao/final-capstone-server#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "mongoose": "^5.0.0",
     "morgan": "^1.9.0",
     "uuid": "^2.0.3"
   },
