--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.1",
     "morgan": "^1.7.0",
+    "nodemon": "^1.14.11",
     "nyc": "^11.4.1",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
