--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "jsonwebtoken": "^8.1.1",
+    "moment": "^2.20.1",
     "mongo": "^0.1.0",
     "mongoose": "^5.0.1",
     "morgan": "^1.7.0",
