--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
+    "http": "0.0.0",
     "jsonwebtoken": "^8.1.1",
     "moment": "^2.20.1",
     "mongo": "^0.1.0",
@@ -25,7 +26,8 @@
     "nyc": "^11.4.1",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^2.0.4"
   },
   "devDependencies": {
     "chai": "^4.0.1",
